Fix vertical alignment for HCM pagination nav buttons.

--- a/packages/design-system/src/styles/components/_Pagination.scss
+++ b/packages/design-system/src/styles/components/_Pagination.scss
@@ -100,6 +100,7 @@ $pagination-page-count-color: $color-gray;
 
     /* stylelint-disable scss/media-feature-value-dollar-variable, max-nesting-depth */
     @media (-ms-high-contrast: active), (forced-colors: active) {
+      align-self: center;
       border: 0;
       padding: $spacer-half $spacer-2;
 
